--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,15 @@ nav {
     flex-direction: row;
     margin: 50px;    
 }
+.subnav{
+   
+    text-align: center;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 10px 0px 0px 0px; 
+}
 h1 {
     font-size: 50px;
     color: darkslategray;
